--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,584 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="uk"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/favicon.ico"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/animation/animate.css"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__side--left">
+          <h1 class="wow slideInLeft header__title main-title">
+            Художній музей
+          </h1>
+          <a
+            href="#events"
+            class="header__button wow fadeInDown"
+          >
+            <div class="header__button-decor"></div>
+            <div class="header__button-content">
+              <span class="header__button-text">Квитки</span>
+              <div class="header__button-image">
+                <img
+                  src="./images/icons/light-arrow-right.svg"
+                  alt="Стрілка вправо"
+                  class="header__button-icon"
+                />
+              </div>
+            </div>
+          </a>
+          <div
+            class="wow flash header__decoration"
+            data-wow-delay="1s"
+            data-wow-duration="1.5s"
+          >
+            <div class="header__decoration-line"></div>
+            <span class="header__decoration-text">Події</span>
+          </div>
+        </div>
+        <div class="header__side--right">
+          <img
+            class="header__bg"
+            src="./images/header-bg.png"
+            alt="Музей"
+          />
+          <a
+            href="#"
+            class="header__logo"
+          >
+            <img
+              src="./images/logo.svg"
+              alt="Логотип"
+              class="header__logo-img"
+            />
+          </a>
+        </div>
+        <div
+          class="header__burger-menu"
+          id="burger-menu"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu aside"
+      id="aside"
+    >
+      <div class="aside__container container">
+        <div class="aside__left">
+          <a
+            href="#"
+            id="close-menu"
+            class="aside__close-btn"
+          ></a>
+          <nav class="aside__navigation">
+            <ul class="aside__list">
+              <li class="aside__item">
+                <a
+                  class="aside__link"
+                  href="#gallery"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="aside__item">
+                <a
+                  class="aside__link"
+                  href="#footer"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="aside__item">
+                <a
+                  class="aside__link"
+                  href="#events"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="aside__item">
+                <a
+                  class="aside__link"
+                  href="#contacts"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="aside__right">
+          <h3 class="aside__title">Графік роботи</h3>
+          <div class="aside__schedule">
+            <ul class="aside__schedule-list">
+              <li class="aside__schedule-item">
+                <span class="aside__schedule-time">12:00 — 20:00</span>
+                <span class="aside__schedule-day">середа</span>
+              </li>
+              <li class="aside__schedule-item">
+                <span class="aside__schedule-time">12:00 — 20:00</span>
+                <span class="aside__schedule-day">четвер</span>
+              </li>
+              <li class="aside__schedule-item">
+                <span class="aside__schedule-time">12:00 — 20:00</span>
+                <span class="aside__schedule-day">п’ятниця</span>
+              </li>
+              <li class="aside__schedule-item">
+                <span class="aside__schedule-time">11:00 — 19:00</span>
+                <span class="aside__schedule-day">субота</span>
+              </li>
+              <li class="aside__schedule-item">
+                <span class="aside__schedule-time">11:00 — 19:00</span>
+                <span class="aside__schedule-day">неділя</span>
+              </li>
+            </ul>
+            <div class="aside__info">
+              <p class="aside__info-item">
+                <span class="aside__info-label">Вихідні:</span>
+                <span class="aside__info-days">понеділок, вівторок</span>
+              </p>
+              <p class="aside__info-item aside__info-note">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main>
+      <section
+        class="events"
+        id="events"
+      >
+        <h2 class="events__title section-title">Актуальні події</h2>
+        <div class="events__content">
+          <article class="events__item container">
+            <img
+              src="./images/event-image-1.png"
+              alt="Васильківський - картина «Крим»"
+              class="wow fadeInLeft events__image"
+              data-wow-duration="1s"
+              data-wow-delay="0.5s"
+            />
+            <div
+              class="wow fadeInUp events__info"
+              data-wow-delay="0.5s"
+            >
+              <p class="events__date">
+                Виставка
+                <span class="events__date--period">26.08-29.11.2019</span>
+              </p>
+              <h3 class="events__subtitle subtitle">Йду і повертаюсь</h3>
+              <p class="events__desc">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+          <article class="events__item container">
+            <img
+              src="./images/event-image-2.png"
+              alt="Петро Холодний - картина «Казка про дівчину і паву»"
+              class="wow fadeInLeft events__image"
+              data-wow-duration="1s"
+              data-wow-delay="0.5s"
+            />
+            <div
+              class="wow fadeInUp events__info"
+              data-wow-delay="0.5s"
+            >
+              <p class="events__date">
+                Виставка
+                <span class="events__date--period">26.08-29.11.2019</span>
+              </p>
+              <h3 class="events__subtitle subtitle">І спогади і мрії</h3>
+              <p class="events__desc">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+          <article class="events__wrapper">
+            <div class="events__bg">
+              <img
+                src="./images/event-bg.png"
+                alt="Абстрактний фон"
+              />
+            </div>
+            <div class="wow flipInX events__window">
+              <p class="events__date">
+                Лекція
+                <span class="events__date--period">26/08/2019 - 11:00</span>
+              </p>
+              <h3 class="events__window-title subtitle">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <h2 class="gallery__title section-title">Галерея</h2>
+
+        <div class="container">
+          <div
+            class="wow fadeIn gallery__desktop"
+            data-wow-duration="2s"
+          >
+            <img
+              src="./images/gallery-1.png"
+              alt="Картина «Наречена» - конкурсна робота Ф. Кричевського"
+              class="gallery__image gallery__image--1"
+            />
+            <img
+              src="./images/gallery-2.png"
+              alt="Картина «Глухомань» - Петро Левченко (1856-1917)"
+              class="gallery__image gallery__image--2"
+            />
+            <img
+              src="./images/gallery-3.png"
+              alt="Картина «Сонячний день» - Киріак Костанді"
+              class="gallery__image gallery__image--3"
+            />
+            <img
+              src="./images/gallery-4.png"
+              alt="Картина «На морі» - М. Глущенко"
+              class="gallery__image gallery__image--4"
+            />
+          </div>
+
+          <div
+            class="wow fadeIn gallery__swiper swiper"
+            data-wow-duration="2s"
+          >
+            <div class="gallery__wrapper swiper-wrapper">
+              <div class="gallery__item swiper-slide">
+                <img
+                  src="./images/gallery-1.png"
+                  alt="Картина «Наречена» - конкурсна робота Ф. Кричевського"
+                  class="gallery__image"
+                />
+              </div>
+              <div class="gallery__item swiper-slide">
+                <img
+                  src="./images/gallery-2.png"
+                  alt="Картина «Глухомань» - Петро Левченко (1856-1917)"
+                  class="gallery__image"
+                />
+              </div>
+              <div class="gallery__item swiper-slide">
+                <img
+                  src="./images/gallery-3.png"
+                  alt="Картина «Сонячний день» - Киріак Костанді"
+                  class="gallery__image"
+                />
+              </div>
+              <div class="gallery__item swiper-slide">
+                <img
+                  src="./images/gallery-4.png"
+                  alt="Картина «На морі» - М. Глущенко"
+                  class="gallery__image"
+                />
+              </div>
+            </div>
+            <div class="gallery__pagination swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="contact"
+        id="contacts"
+      >
+        <div class="contact__container">
+          <h2 class="contact__title section-title">Підписка</h2>
+          <p class="contact__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="wow pulse contact__form"
+            data-wow-duration="1.5s"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              name="email"
+              class="contact__input"
+              placeholder="E-mail"
+              autocomplete="off"
+              required
+            />
+            <button
+              class="contact__btn"
+              type="submit"
+            >
+              <img
+                src="./images/icons/arrow-right.svg"
+                alt="arrow-right"
+                class="contact__btn-icon"
+              />
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="footer__container container">
+        <div class="footer__top">
+          <a
+            href="#"
+            class="footer__logo"
+          >
+            <img
+              src="./images/footer-logo.svg"
+              alt="Логотип"
+              class="footer__logo-img"
+            />
+          </a>
+          <div class="footer__socials">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg
+                width="24"
+                height="24"
+                fill="none"
+                class="footer__socials-img"
+              >
+                <g clip-path="url(#clip0_320_149)">
+                  <path
+                    fill="#000"
+                    d="M8.82 4.649v3.304H6.4v4.04h2.42v12.008h4.974V11.994h3.337s.312-1.937.464-4.056h-3.782V5.176c0-.413.542-.969 1.078-.969H17.6V.001h-3.684c-5.218 0-5.095 4.044-5.095 4.648"
+                  ></path>
+                </g>
+              </svg>
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg
+                width="24"
+                height="24"
+                fill="none"
+                class="footer__socials-img"
+              >
+                <g
+                  fill="#000"
+                  clip-path="url(#clip0_320_152)"
+                >
+                  <path
+                    d="M17.503 0H6.497A6.504 6.504 0 0 0 0 6.497v11.007A6.504 6.504 0 0 0 6.497 24h11.007A6.504 6.504 0 0 0 24 17.504V6.497A6.504 6.504 0 0 0 17.503 0M12 18.562A6.57 6.57 0 0 1 5.438 12 6.57 6.57 0 0 1 12 5.438 6.57 6.57 0 0 1 18.562 12 6.57 6.57 0 0 1 12 18.562m6.72-11.577c-1.07 0-1.94-.87-1.94-1.939 0-1.07.87-1.94 1.94-1.94s1.939.87 1.939 1.94-.87 1.94-1.94 1.94"
+                  ></path>
+                  <path
+                    d="M12 6.845A5.16 5.16 0 0 0 6.845 12 5.16 5.16 0 0 0 12 17.155 5.16 5.16 0 0 0 17.155 12 5.16 5.16 0 0 0 12 6.845M18.72 4.514a.533.533 0 1 0 0 1.066.533.533 0 0 0 0-1.066"
+                  ></path>
+                </g>
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__schedule">
+          <h3 class="footer-item-title">Графік роботи</h3>
+          <ul class="footer__schedule-worktime">
+            <li class="footer__schedule-item">
+              <p>
+                <span class="footer__schedule-hours">12:00 — 20:00</span>
+                середа
+              </p>
+            </li>
+            <li class="footer__schedule-item">
+              <p>
+                <span class="footer__schedule-hours">12:00 — 20:00</span>
+                четвер
+              </p>
+            </li>
+            <li class="footer__schedule-item">
+              <p>
+                <span class="footer__schedule-hours">12:00 — 20:00</span>
+                п'ятниця
+              </p>
+            </li>
+            <li class="footer__schedule-item">
+              <p>
+                <span class="footer__schedule-hours">11:00 — 19:00</span>
+                субота
+              </p>
+            </li>
+            <li class="footer__schedule-item">
+              <p>
+                <span class="footer__schedule-hours">11:00 — 19:00</span>
+                неділя
+              </p>
+            </li>
+          </ul>
+          <p class="footer__schedule-weekend">
+            <span class="footer__schedule-dayoff">Вихідні:</span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <h3 class="footer-item-title">Контакти:</h3>
+          <div class="footer__contacts-address">
+            <a
+              href="https://maps.app.goo.gl/DseMD7v73qcu7Au17"
+              class="footer__contacts-link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6;
+              <br />
+              Київ, 01001
+              <br />
+            </a>
+            <a
+              href="tel:+380442781357"
+              class="footer__contacts-link"
+            >
+              тел. +38 (044) 278-13-57
+              <br />
+            </a>
+            <a
+              href="tel:+380442787454"
+              class="footer__contacts-link"
+            >
+              факс +38 (044) 278-74-54
+              <br />
+            </a>
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__contacts-link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__go-top">
+          <a href="#">
+            <svg
+              width="50"
+              height="50"
+              fill="none"
+              class="footer__go-top__logo"
+            >
+              <circle
+                cx="25"
+                cy="25"
+                r="24.5"
+                stroke="#1A5A4C"
+              ></circle>
+              <path
+                fill="#1A5A4C"
+                d="m25 19-5 5 .705.705 3.795-3.79V31h1V20.915l3.795 3.79L30 24z"
+              ></path>
+            </svg>
+          </a>
+        </div>
+
+        <nav class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a
+                href="#gallery"
+                class="footer__nav-link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#footer"
+                class="footer__nav-link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#events"
+                class="footer__nav-link"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#contacts"
+                class="footer__nav-link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__bottom">
+          <p>Copyright © 2019. All Rights Reserved.</p>
+          <p>
+            Designed by
+            <a
+              href="https://www.behance.net/zhyriadatmar"
+              target="_blank"
+              class="footer__bottom-designer"
+            >
+              Zhyriada Marina
+            </a>
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <script src="./scripts/lib/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script
+      type="module"
+      src="scripts/main.js"
+    ></script>
   </body>
 </html>
