--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,624 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Namu</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header">
+      <div class="header__container">
+        <div
+          class="top-bar"
+          id="top-bar"
+        >
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+          <a
+            href="#"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="images/namu-logo.svg"
+              alt="NAMU logo"
+              class="top-bar__logo"
+            />
+          </a>
+        </div>
+
+        <div class="header__bottom">
+          <h1 class="header__title">Художній музей</h1>
+          <a
+            href="#actual-events"
+            class="header__button"
+          >
+            <input
+              class="header__ticket"
+              type="button"
+              value="Квитки"
+            />
+            <input
+              class="header__submit"
+              type="submit"
+              value=">"
+            />
+          </a>
+
+          <a
+            href="#actual-events"
+            class="header__events-arrow-link"
+          >
+            <img
+              src="images/icons/events-arrow.svg"
+              alt="Events arrow"
+              class="header__events-arrow-img"
+            />
+          </a>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region aside bar -->
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container__aside">
+        <!-- #region top aside -->
+        <div class="top-bar content--aside">
+          <a
+            href="#"
+            title="close menu"
+            class="icon icon--close"
+          ></a>
+
+          <nav class="nav nav--aside menu__nav nav--top-menu">
+            <ul class="nav__list nav__list--aside nav__list--left">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link nav__link--aside"
+                >
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#actual-events"
+                  class="nav__link nav__link--aside"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+
+            <ul class="nav__list nav__list--aside nav__list--right">
+              <li class="nav__item">
+                <a
+                  href="#subscription"
+                  class="nav__link nav__link--aside"
+                >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#footer"
+                  class="nav__link nav__link--aside"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <!-- #endregion -->
+
+        <div class="menu__underline"></div>
+
+        <!-- #region aside bottom -->
+        <div class="aside__bottom">
+          <div class="schedule schedule--aside">
+            <div class="schedule__table schedule__table--aside">
+              <p class="schedule__name schedule__name--aside">Графік роботи</p>
+              <p class="schedule__hours schedule__hours--aside">
+                <strong>12:00 — 20:00</strong>
+                середа
+                <br />
+                <strong>12:00 — 20:00</strong>
+                четвер
+                <br />
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+                <br />
+                <strong>11:00 — 19:00</strong>
+                субота
+                <br />
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </p>
+            </div>
+
+            <p class="schedule__note schedule__note--aside">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+        <!-- #endregion -->
+      </div>
+    </aside>
+    <!-- #endregion -->
+
+    <!-- #region main -->
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <!-- #region actual-events -->
+          <section
+            class="actual-events"
+            id="actual-events"
+          >
+            <h2 class="section-title">Актуальні події</h2>
+            <div class="actual-events__events">
+              <article class="event actual-events__event">
+                <a
+                  href="#"
+                  class="event__link"
+                >
+                  <img
+                    src="images/actual-events/event1.png"
+                    alt="go and back event"
+                    class="event__photo"
+                  />
+
+                  <div class="event__info">
+                    <div class="event__data">
+                      <p class="event__type">ВИСТАВКА</p>
+                      <p class="event__date">26.08-29.11.2019</p>
+                    </div>
+                    <h3 class="event__name event__name--first">
+                      Йду і повертаюсь
+                    </h3>
+                    <p class="event__about">
+                      Національний Художній Музей України презентує унікальну
+                      частину колекції Градобанку - українське мистецтво другої
+                      половини 1980-1995 років.
+                    </p>
+                  </div>
+                </a>
+              </article>
+
+              <article class="event actual-events__event">
+                <a
+                  href="#"
+                  class="event__link"
+                >
+                  <img
+                    src="images/actual-events/event2.png"
+                    alt="and memmories and dreams"
+                    class="event__photo"
+                  />
+                  <div class="event__info">
+                    <div class="event__data">
+                      <p class="event__type">ВИСТАВКА</p>
+                      <p class="event__date">26.08-29.11.2019</p>
+                    </div>
+                    <h3 class="event__name event__name--second">
+                      І спогади і мрії
+                    </h3>
+                    <p class="event__about">
+                      Національний художній музей України до 100 річчя від дня
+                      народження видатної української художниці Тетяни
+                      Яблонської відкриває ретроспективну ювілейну виставку «І
+                      спогади і мрії».
+                    </p>
+                  </div>
+                </a>
+              </article>
+            </div>
+          </section>
+          <!-- #endregion -->
+
+          <!-- #region lecture -->
+          <section
+            class="lectures"
+            id="lectures"
+          >
+            <article class="lectures__lecture event--cover-img">
+              <a
+                href="#"
+                class="lecture__link lecture"
+              >
+                <div class="lecture__info">
+                  <div class="lecture__data">
+                    <p class="lecture__type">ЛЕКЦІЯ</p>
+                    <p class="lecture__date">26/08/2019 - 11:00</p>
+                  </div>
+                  <h3 class="lecture__name">Від класицизму до романтизму</h3>
+                </div>
+              </a>
+            </article>
+          </section>
+          <!-- #endregion -->
+
+          <!-- #region gallery-->
+          <section
+            class="gallery"
+            id="gallery"
+          >
+            <h2 class="section-title">Галерея</h2>
+            <div class="gallery__wrapper">
+              <div class="gallery__paints">
+                <a
+                  href="#slide1"
+                  class="gallery__link gallery__link--square gallery__link--big"
+                  id="slide1"
+                >
+                  <img
+                    src="images/gallery/paint1.png"
+                    alt="paint 1"
+                    class="gallery__photo"
+                  />
+                </a>
+                <a
+                  href="#slide2"
+                  class="gallery__link gallery__link--wide gallery__link--big"
+                  id="slide2"
+                >
+                  <img
+                    src="images/gallery/paint2-h.png"
+                    alt="paint 2"
+                    class="gallery__photo gallery__photo--desktop"
+                  />
+
+                  <img
+                    src="images/gallery/paint-tablet.png"
+                    alt="paint 2"
+                    class="gallery__photo gallery__photo--mobtab"
+                  />
+                </a>
+                <a
+                  href="#slide3"
+                  class="gallery__link gallery__link--wide gallery__link--small"
+                  id="slide3"
+                >
+                  <img
+                    src="images/gallery/paint3-w.png"
+                    alt="paint 3"
+                    class="gallery__photo"
+                  />
+                </a>
+                <a
+                  href="#slide4"
+                  class="gallery__link gallery__link--square gallery__link--small"
+                  id="slide4"
+                >
+                  <img
+                    src="images/gallery/paint4.png"
+                    alt="paint 4"
+                    class="gallery__photo"
+                  />
+                </a>
+              </div>
+
+              <div class="gallery__dots">
+                <a
+                  href="#slide1"
+                  class="gallery__dot"
+                  title="gallery-page"
+                ></a>
+
+                <a
+                  href="#slide2"
+                  class="gallery__dot"
+                  title="gallery-page"
+                ></a>
+
+                <a
+                  href="#slide3"
+                  class="gallery__dot"
+                  title="gallery-page"
+                ></a>
+
+                <a
+                  href="#slide4"
+                  class="gallery__dot"
+                  title="gallery-page"
+                ></a>
+              </div>
+            </div>
+          </section>
+          <!-- #endregion -->
+
+          <!-- #region subscription -->
+          <section
+            class="subscription"
+            id="subscription"
+          >
+            <div class="wrapper">
+              <h2 class="section-title title--sub">Підписка</h2>
+              <p class="subscription__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <form
+                onsubmit="this.reset(); return false;"
+                class="subscription__form"
+                id="subscriptionForm"
+              >
+                <input
+                  type="email"
+                  id="email"
+                  class="subscription__email"
+                  placeholder="abracadabra@gmail.com"
+                  required
+                />
+                <button
+                  type="submit"
+                  title="button-submit"
+                  class="subscription__submit"
+                  id="subscription__submit"
+                >
+                  <div class="subscription__icon"></div>
+                </button>
+
+                <!-- <script>
+                  document.getElementById('subscription__submit').addEventListener('click', function() {
+                      location.reload();
+                  });
+                </script> -->
+              </form>
+            </div>
+          </section>
+          <!-- #endregion -->
+        </div>
+      </div>
+    </main>
+    <!-- #endregion -->
+
+    <!-- #region footer -->
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="footer__container">
+        <!-- #region footer-top -->
+        <div class="footer__top content-top">
+          <div class="footer__social">
+            <a
+              href="#"
+              class="footer__logo-link"
+            >
+              <img
+                src="images/namu-logo.svg"
+                alt="NA MU logo"
+                class="footer__logo"
+              />
+            </a>
+            <div class="footer__icons">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="footer__icon-link"
+              >
+                <img
+                  src="images/icons/fb-icon.svg"
+                  alt="fb icon"
+                  class="footer__icon"
+                />
+              </a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="footer__icon-link"
+              >
+                <img
+                  src="images/icons/insta.svg"
+                  alt="instagram icon"
+                  class="footer__icon"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="schedule">
+            <p class="schedule__name">Графік роботи</p>
+            <p class="schedule__hours">
+              <strong>12:00 — 20:00</strong>
+              середа
+              <br />
+              <strong>12:00 — 20:00</strong>
+              четвер
+              <br />
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+              <br />
+              <strong>11:00 — 19:00</strong>
+              субота
+              <br />
+              <strong>11:00 — 19:00</strong>
+              неділя
+            </p>
+            <p class="schedule__note">
+              Вихідні: понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div
+            class="address"
+            id="address"
+          >
+            <p class="address__name">Контакти:</p>
+            <p class="address__value">
+              вул. М. Грушевського, 6; Київ, 01001
+              <br />
+              тел. +38 (044) 278-13-57
+              <br />
+              факс +38 (044) 278-74-54
+              <br />
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <div class="footer__up-page">
+            <input
+              href="#"
+              type="button"
+              value="↑"
+              class="footer__up-page-arrow"
+            />
+          </div>
+
+          <div class="footer__top-underline"></div>
+
+          <!-- #region right bottom nav for desktop -->
+          <ul class="right-nav__list-left nav__list nav__list--left">
+            <li class="nav__item">
+              <a
+                href="#gallery"
+                class="nav__link"
+              >
+                Галерея
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#actual-events"
+                class="nav__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+          </ul>
+
+          <ul class="right-nav__list-right nav__list--right">
+            <li class="nav__item">
+              <a
+                href="#subscription"
+                class="nav__link"
+              >
+                Про Нас
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#footer"
+                class="nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+          <!-- #endregion -->
+        </div>
+
+        <!-- #endregion  -->
+
+        <!-- #region footer-bottom -->
+        <div class="footer__bottom">
+          <nav class="nav bottom__nav nav--bottom-menu">
+            <ul class="nav__list nav__list--left">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#actual-events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+            <ul class="nav__list nav__list--right">
+              <li class="nav__item">
+                <a
+                  href="№subscription"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#footer"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="bottom__desighned">
+            <p class="bottom__author">Designed by Zhyriada Marina</p>
+            <p class="bottom__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+        <!-- #endregion  -->
+      </div>
+    </footer>
+    <!-- #endregion -->
   </body>
 </html>
